<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        style="@style/HeaderStyle"
        android:text="@string/quantity" />
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        style="@style/HeaderStyle"
        android:text="@string/description" />
    <TextView
        android:id="@+id/tv_unit_price"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        style="@style/HeaderStyle"
        android:text="@string/unit_price" />
    <TextView
        android:id="@+id/tv_total"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        style="@style/HeaderStyle"
        android:text="@string/total" />

</LinearLayout>