<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dev.kiko.myinvoice.activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            app:cardCornerRadius="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <AutoCompleteTextView
                    android:id="@+id/et_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:completionHint="Contact"
                    android:dropDownHeight="wrap_content"
                    android:ems="10"
                    android:hint="@string/contact"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_destination_contact"
                    app:layout_constraintStart_toStartOf="@+id/et_date"
                    app:layout_constraintTop_toTopOf="@+id/tv_destination_contact" />

                <TextView
                    android:id="@+id/tv_company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="30sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/company_name_label" />

                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:hint="@string/date_of_invoice"
                    android:inputType="date"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_date_label"
                    app:layout_constraintStart_toEndOf="@+id/tv_date_label"
                    app:layout_constraintTop_toTopOf="@+id/tv_date_label" />

                <TextView
                    android:id="@+id/tv_company_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/tv_company_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company_name"
                    tools:text="Company Address" />

                <TextView
                    android:id="@+id/tv_destination_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/to_label"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_date_label"
                    app:layout_constraintTop_toBottomOf="@+id/tv_date_label" />

                <ImageView
                    android:id="@+id/iv_company_logo"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginEnd="16dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_domain_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_company_address"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_company_name" />

                <TextView
                    android:id="@+id/tv_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/date_label"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_company_address"
                    app:layout_constraintTop_toBottomOf="@+id/tv_company_address" />
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/content_new_invoice_header" />

                <include layout="@layout/content_invoice_table" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:src="@drawable/ic_account_balance_black_24dp" />

                <EditText
                    android:id="@+id/et_tax_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/tax"
                    android:inputType="numberDecimal"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/percentage_sign"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:src="@drawable/ic_shopping_cart_black_24dp" />

                <EditText
                    android:id="@+id/et_shipping_and_handling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/shipping_and_handling"
                    android:inputType="numberDecimal"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:text="Total"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                tools:text="Random Price $" />

            <Button
                android:id="@+id/bt_signature"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="12dp"
                android:text="@string/sign_invoice" />


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</ScrollView>
